# haskell-ide-engine

./: .gitignore  .gitmodules  .travis.yml  Leak.hs  appveyor.yml  cabal.project  haskell-ide-engine.cabal  stack-8.2.1.yaml  stack-8.2.2.yaml  stack-8.4.2.yaml  stack-8.4.3.yaml  stack.yaml
.circleci/: config.yml  tidyCache.sh
app/: HieWrapper.hs  MainHie.hs
bench/: Bench.hs
bench/sample/: Lib.hs  Main.hs  sample.cabal
hie-plugin-api/: hie-plugin-api.cabal
hie-plugin-api/Haskell/Ide/Engine/: ArtifactMap.hs  GhcModuleCache.hs  ModuleCache.hs  PluginDescriptor.hs  PluginUtils.hs  PluginsIdeMonads.hs
leak-test/: Main.hs  foo.c
src/Haskell/Ide/Engine/: Dispatcher.hs  Options.hs
src/Haskell/Ide/Engine/Plugin/: Base.hs  GhcMod.hs  Haddock.hs  HieExtras.hs  HsImport.hs
src/Haskell/Ide/Engine/Transport/: JsonStdio.hs  LspStdio.hs
test/: Functional.hs
test/dispatcher/: Main.hs
test/unit/: ApplyRefactPluginSpec.hs  BrittanySpec.hs  ExtensibleStateSpec.hs  GhcModPluginSpec.hs  HaRePluginSpec.hs  HooglePluginSpec.hs  Main.hs
test/unit/Inner/: Main.hs
test/utils/: TestUtils.hs  UnitUtils.hs
