name:                sample
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Lib
  build-depends:       base >=4.8
  default-language:    Haskell2010

executable sample
  main-is:             Main.hs
  build-depends:       base >=4.8
  default-language:    Haskell2010
